2004-10-13  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/RT.pm: /dev/null RT output from keyword addition.

	* Baka/StructuredConf.pm: Don't overparse strings.

2004-10-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/RT.pm: Return ticket number when ticket is created.
	Add keywords method

2004-10-04  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/StructuredConf.pm: Handle comments.

2004-09-07  Seth Robertson  <seth@cheviot.sysdetect.com>

	* perl/BkReportGen/helper_smart.pl (helper_smart($$$$)): Enable
	S.M.A.R.T. disk health monitoring.

2004-08-25  Seth Robertson  <seth@cheviot.sysdetect.com>

	* lib/installlib.pl (question($$$$;$)): If no verification, don't fail.

2004-06-25  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/installlib.pl (kill_job($$$$$)): Do second cancel, kill -9,
	and post kill wait if asked.

2004-06-18  Seth Robertson  <seth@pearl.sysdetect.com>

	* bin/BkReportGen: Fix locking.  Also deal with stale locks while
	I am at it.

2004-05-17  Seth Robertson  <seth@winwood.sysdetect.com>

	* perl/BkReportGen/helper_simplereports.pl
	(helper_simplereports($$$$$$)): Add table seperator between
	non-operating and operating sections.  Colorize HTML error
	reports.  Starrize the text error names.

2004-04-06  Seth Robertson  <seth@pearl.sysdetect.com>

	* perl/BkReportGen/helper_simplereports.pl
	(helper_simplereports($$$$$$)): Allow report errors to come out
	first.  Context be damned!

	* perl/BkReportGen/helper_ifconfig.pl (helper_ifconfig($$$$)): If
	we have interfaces defined in antura.conf, only report errors
	about those interfaces.

2004-03-11  Seth Robertson  <seth@pearl.sysdetect.com>

	* bin/quotexml: Program to quote xml (or html) from people who
	interpret such

2004-03-05  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/Conf.pm: Allow set_uniq_value to reset a commented out key.

2004-03-04  Seth Robertson  <seth@startide.sysdetect.com>

	* bin/BkReportGen: Generate warning messages if the output methods